--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Aplicativo para el uso de PokeAPI",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js" 
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js --open",
+    "createAPI": "node src/pokemons.js"
   },
   "repository": {
     "type": "git",
