--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Aplicativo para el uso de PokeAPI",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js --open",
-    "createAPI": "node src/pokemons.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
